--- a/Professional website/style.css
+++ b/Professional website/style.css
@@ -59,10 +59,18 @@ main{
 main h1{
 	font-weight: bold;
 }
+.head p{
+	/* display: flex;
+	align-items: center;
+	justify-content: center; */
+
+	width: 50%;
+	margin: 0 auto;
+}
 .news{
 
 	background-color: #353535;
-	color: white;
+	color: rgb(256, 256, 256);
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -94,11 +102,14 @@ button{
 	margin-right: 40px;
 	margin-top: 5px;
 }
-.box{
+/* .box{
 	align-items: center;
 	margin-left: 20px;
 	margin-right: 20px;
 }
+.box p{
+	align-items: center;
+} */
 footer p{
 	background-color: #353535;
 	width: 100%;
