--- a/Professional website/style.css
+++ b/Professional website/style.css
@@ -111,7 +111,7 @@ button{
 	align-items: center;
 } */
 footer p{
-	background-color: #353535;
+	background-color: rgb(175, 83, 175);
 	width: 100%;
 	height: 10vh;
 	margin-top: 0px;
